refactor: modify database entities